[package]
name = "foosball"
version = "0.7.28"
authors = ["Bjarke Sørensen <bs@wasd.dk>",
    "Lucas Falch Sørensen <lucas@wasd.dk"]
edition = "2018"

[dependencies]
rocket = "0.4"
bbt = {version = "0.2.0", features = ["serde"]}
rusqlite = "0.16.0"
lazy_static = "1.2.0"
tera = "0.11"
toml = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
